@@ -1,3 +1,9 @@
+2012-09-05  Jan Tatarik  <jan.tatarik@gmail.com>
+
+	* gnus-logic.el (gnus-advanced-body): Allow scoring on decoded bodies.
+
+	* gnus-score.el (gnus-score-decode-text-parts): Ditto.
+
 2012-09-05  Magnus Henoch  <magnus.henoch@gmail.com>
 
 	* nnmaildir.el: Make nnmaildir understand and write maildir flags.
